Basic browser detector

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css"/>
         <title>CISC 474 Website</title>
+        <script async src=scripts/main.js></script>
     </head>
     <body>
-        
+            <h1 class="main">This is a header</h1>
+            <div id="primaryDiv">
+                <button class="imageButton">A button</button>
+            </div>
     </body>
 </html>
