added some styling

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css"/>
         <title>CISC 474 Website</title>
         <script async src=scripts/main.js></script>
     </head>
     <body>
-            <h1 class="main">This is a header</h1>
+           <div id="headerDiv">
+                <h1 class="main">Browser: <b>Unknown</b></h1>
+           </div>
             <div id="primaryDiv">
-                <button class="imageButton">A button</button>
+                <button class="imageButton">What's your browser</button>
             </div>
     </body>
 </html>
